--- a/NeconoteSDK/Base.lproj/Main.storyboard
+++ b/NeconoteSDK/Base.lproj/Main.storyboard
@@ -65,13 +65,28 @@
                                     <action selector="clickBtnToggle:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="1aY-pU-3kL"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oxc-JQ-pdn">
+                                <rect key="frame" x="192" y="255" width="216" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="lD9-sP-Pia"/>
+                                    <constraint firstAttribute="width" constant="216" id="vRV-sk-uQZ"/>
+                                </constraints>
+                                <state key="normal" title="disconnect">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="clickBtnDisconnect:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="8c3-LI-Q0d"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="19A-25-Vhj" firstAttribute="leading" secondItem="vD7-Xm-Ae8" secondAttribute="leading" id="ORq-5D-JEq"/>
+                            <constraint firstItem="oxc-JQ-pdn" firstAttribute="top" secondItem="mxE-Bg-wPB" secondAttribute="bottom" constant="8" symbolic="YES" id="QmF-6l-if5"/>
                             <constraint firstItem="19A-25-Vhj" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="83" id="RRH-KX-Dcg"/>
                             <constraint firstItem="vD7-Xm-Ae8" firstAttribute="top" secondItem="19A-25-Vhj" secondAttribute="bottom" constant="8" symbolic="YES" id="XlM-nd-xXe"/>
                             <constraint firstItem="mxE-Bg-wPB" firstAttribute="leading" secondItem="Pq7-A7-zy7" secondAttribute="leading" id="jgW-wp-uPl"/>
+                            <constraint firstItem="oxc-JQ-pdn" firstAttribute="leading" secondItem="mxE-Bg-wPB" secondAttribute="leading" id="mUQ-nd-25N"/>
                             <constraint firstItem="mxE-Bg-wPB" firstAttribute="top" secondItem="Pq7-A7-zy7" secondAttribute="bottom" constant="8" symbolic="YES" id="mWH-6f-kWy"/>
                             <constraint firstItem="19A-25-Vhj" firstAttribute="trailing" secondItem="Pq7-A7-zy7" secondAttribute="trailing" id="mra-0N-Jdx"/>
                             <constraint firstItem="19A-25-Vhj" firstAttribute="leading" secondItem="Pq7-A7-zy7" secondAttribute="leading" id="n0E-yu-Mpy"/>
